--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(frpc)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(frpc main.cpp server/worker_thread.h server/server.cpp server/server.h config/config.cpp config/config.h)
+add_executable(frpc main.cpp server/worker_thread.h server/server.cpp server/server.h config/config.cpp config/config.h server/worker.cpp server/worker.h server/Epoll.cpp server/Epoll.h)
