--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16)
 project(frpc)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(frpc main.cpp server/worker_thread.h server/server.cpp server/server.h config/config.cpp config/config.h server/worker.cpp server/worker.h server/Epoll.cpp server/Epoll.h)
+add_executable(frpc main.cpp server/BaseSocket.hpp)
