修改cmake文件，添加用于解析ini文件的config文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(frpc)
 
 set(CMAKE_CXX_STANDARD 11)
 
+include_directories(3rdparty)
+include_directories(comm)
+
 add_executable(frpc main.cpp)
